// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the money path in placeOrder delivery: lines, tax, packing and the billed amount 1`] = `
{
  "area": "Indiranagar",
  "code": "(random)",
  "itemsJson": [
    {
      "dishId": "d1",
      "lineInr": 340,
      "name": "Dal Makhani",
      "priceInr": 340,
      "qty": 1,
    },
    {
      "dishId": "d2",
      "lineInr": 760,
      "name": "Paneer Tikka",
      "priceInr": 380,
      "qty": 2,
    },
    {
      "dishId": "d3",
      "lineInr": 1380,
      "name": "Butter Chicken",
      "priceInr": 460,
      "qty": 3,
    },
  ],
  "mode": "delivery",
  "packingInr": 40,
  "restaurantId": "rst_saffron",
  "restaurantName": "Saffron House",
  "status": "confirmed",
  "subtotalInr": 2480,
  "taxInr": 124,
  "totalInr": 2644,
  "userId": "u1",
}
`;

exports[`the money path in placeOrder pickup: lines, tax, packing and the billed amount 1`] = `
{
  "area": "Indiranagar",
  "code": "(random)",
  "itemsJson": [
    {
      "dishId": "d1",
      "lineInr": 340,
      "name": "Dal Makhani",
      "priceInr": 340,
      "qty": 1,
    },
    {
      "dishId": "d2",
      "lineInr": 760,
      "name": "Paneer Tikka",
      "priceInr": 380,
      "qty": 2,
    },
    {
      "dishId": "d3",
      "lineInr": 1380,
      "name": "Butter Chicken",
      "priceInr": 460,
      "qty": 3,
    },
  ],
  "mode": "pickup",
  "packingInr": 0,
  "restaurantId": "rst_saffron",
  "restaurantName": "Saffron House",
  "status": "confirmed",
  "subtotalInr": 2480,
  "taxInr": 124,
  "totalInr": 2604,
  "userId": "u1",
}
`;

exports[`what the restaurants engine computes today derived attributes (distance, quality, hygiene, flags), per seed 1`] = `
{
  "rst_biryani": {
    "distanceKm": 4.6,
    "etaMins": 26,
    "familyFriendly": true,
    "foodQuality": 4.3999999999999995,
    "hygiene": 4.3,
    "jain": false,
    "outdoor": false,
    "petFriendly": false,
    "pureVeg": true,
    "vegan": false,
  },
  "rst_cafe": {
    "distanceKm": 1.3,
    "etaMins": 13,
    "familyFriendly": false,
    "foodQuality": 4.1000000000000005,
    "hygiene": 4.2,
    "jain": false,
    "outdoor": false,
    "petFriendly": true,
    "pureVeg": false,
    "vegan": false,
  },
  "rst_chaat": {
    "distanceKm": 3.9,
    "etaMins": 24,
    "familyFriendly": false,
    "foodQuality": 4.1000000000000005,
    "hygiene": 4,
    "jain": false,
    "outdoor": true,
    "petFriendly": false,
    "pureVeg": false,
    "vegan": true,
  },
  "rst_dosa": {
    "distanceKm": 3.3,
    "etaMins": 21,
    "familyFriendly": false,
    "foodQuality": 4.5,
    "hygiene": 4.4,
    "jain": false,
    "outdoor": false,
    "petFriendly": false,
    "pureVeg": false,
    "vegan": false,
  },
  "rst_saffron": {
    "distanceKm": 2.7,
    "etaMins": 19,
    "familyFriendly": false,
    "foodQuality": 4.5,
    "hygiene": 4.499999999999999,
    "jain": false,
    "outdoor": false,
    "petFriendly": false,
    "pureVeg": false,
    "vegan": false,
  },
  "rst_sushi": {
    "distanceKm": 1,
    "etaMins": 12,
    "familyFriendly": true,
    "foodQuality": 4.8999999999999995,
    "hygiene": 4.8,
    "jain": false,
    "outdoor": false,
    "petFriendly": false,
    "pureVeg": true,
    "vegan": false,
  },
  "rst_trattoria": {
    "distanceKm": 1.4,
    "etaMins": 14,
    "familyFriendly": true,
    "foodQuality": 4.6,
    "hygiene": 4.3,
    "jain": false,
    "outdoor": true,
    "petFriendly": true,
    "pureVeg": true,
    "vegan": true,
  },
  "rst_wok": {
    "distanceKm": 2.7,
    "etaMins": 19,
    "familyFriendly": false,
    "foodQuality": 4.3,
    "hygiene": 4.199999999999999,
    "jain": false,
    "outdoor": true,
    "petFriendly": false,
    "pureVeg": false,
    "vegan": true,
  },
}
`;

exports[`what the restaurants engine computes today estimated dish macros, over the real menus 1`] = `
{
  "Avocado Maki (₹420)": {
    "carbs": 152,
    "estimated": true,
    "fat": 12,
    "kcal": 756,
    "protein": 10,
  },
  "Avocado Toast (₹320)": {
    "carbs": 78,
    "estimated": true,
    "fat": 12,
    "kcal": 452,
    "protein": 8,
  },
  "Big Breakfast (₹440)": {
    "carbs": 55,
    "estimated": true,
    "fat": 18,
    "kcal": 486,
    "protein": 26,
  },
  "Butter Chicken (₹460)": {
    "carbs": 82,
    "estimated": true,
    "fat": 24,
    "kcal": 648,
    "protein": 26,
  },
  "Chicken Dum Biryani (₹320)": {
    "carbs": 95,
    "estimated": true,
    "fat": 24,
    "kcal": 700,
    "protein": 26,
  },
  "Chilli Paneer (₹320)": {
    "carbs": 52,
    "estimated": true,
    "fat": 12,
    "kcal": 376,
    "protein": 15,
  },
  "Dal Makhani (₹340)": {
    "carbs": 84,
    "estimated": true,
    "fat": 24,
    "kcal": 612,
    "protein": 15,
  },
  "Edamame (₹260)": {
    "carbs": 12,
    "estimated": true,
    "fat": 12,
    "kcal": 188,
    "protein": 8,
  },
  "Ghee Podi Idli (₹160)": {
    "carbs": 33,
    "estimated": true,
    "fat": 24,
    "kcal": 380,
    "protein": 8,
  },
  "Idli Vada Combo (₹130)": {
    "carbs": 81,
    "estimated": true,
    "fat": 12,
    "kcal": 488,
    "protein": 14,
  },
  "Kung Pao Chicken (₹380)": {
    "carbs": 93,
    "estimated": true,
    "fat": 18,
    "kcal": 638,
    "protein": 26,
  },
  "Margherita (₹480)": {
    "carbs": 87,
    "estimated": true,
    "fat": 12,
    "kcal": 488,
    "protein": 8,
  },
  "Masala Dosa (₹150)": {
    "carbs": 108,
    "estimated": true,
    "fat": 12,
    "kcal": 580,
    "protein": 10,
  },
  "Mutton Biryani (₹420)": {
    "carbs": 123,
    "estimated": true,
    "fat": 18,
    "kcal": 758,
    "protein": 26,
  },
  "Paneer Tikka (₹380)": {
    "carbs": 20,
    "estimated": true,
    "fat": 24,
    "kcal": 400,
    "protein": 26,
  },
  "Pani Puri (₹90)": {
    "carbs": 37,
    "estimated": true,
    "fat": 12,
    "kcal": 288,
    "protein": 8,
  },
  "Penne Arrabbiata (₹440)": {
    "carbs": 87,
    "estimated": true,
    "fat": 12,
    "kcal": 488,
    "protein": 8,
  },
  "Salmon Nigiri (₹520)": {
    "carbs": 55,
    "estimated": true,
    "fat": 18,
    "kcal": 486,
    "protein": 26,
  },
  "Sev Puri (₹110)": {
    "carbs": 39,
    "estimated": true,
    "fat": 12,
    "kcal": 296,
    "protein": 8,
  },
  "Shakshuka (₹380)": {
    "carbs": 53,
    "estimated": true,
    "fat": 18,
    "kcal": 478,
    "protein": 26,
  },
  "Spaghetti Carbonara (₹560)": {
    "carbs": 55,
    "estimated": true,
    "fat": 18,
    "kcal": 486,
    "protein": 26,
  },
  "Vada Pav (₹70)": {
    "carbs": 35,
    "estimated": true,
    "fat": 12,
    "kcal": 280,
    "protein": 8,
  },
  "Veg Dum Biryani (₹260)": {
    "carbs": 128,
    "estimated": true,
    "fat": 12,
    "kcal": 660,
    "protein": 10,
  },
  "Veg Hakka Noodles (₹260)": {
    "carbs": 71,
    "estimated": true,
    "fat": 12,
    "kcal": 424,
    "protein": 8,
  },
}
`;

exports[`what the restaurants engine computes today the Together City Score and its parts, per seed 1`] = `
{
  "rst_biryani": {
    "category": "Restaurant",
    "menuCompleteness": 60,
    "priceCategory": "₹₹",
    "tcScore": 86,
    "valueScore": 88,
  },
  "rst_cafe": {
    "category": "Café",
    "menuCompleteness": 70,
    "priceCategory": "₹₹",
    "tcScore": 84,
    "valueScore": 88,
  },
  "rst_chaat": {
    "category": "Street Food",
    "menuCompleteness": 70,
    "priceCategory": "₹",
    "tcScore": 83,
    "valueScore": 95,
  },
  "rst_dosa": {
    "category": "Café",
    "menuCompleteness": 70,
    "priceCategory": "₹",
    "tcScore": 88,
    "valueScore": 88,
  },
  "rst_saffron": {
    "category": "Restaurant",
    "menuCompleteness": 76,
    "priceCategory": "₹₹",
    "tcScore": 88,
    "valueScore": 78,
  },
  "rst_sushi": {
    "category": "Restaurant",
    "menuCompleteness": 70,
    "priceCategory": "₹₹₹",
    "tcScore": 89,
    "valueScore": 52,
  },
  "rst_trattoria": {
    "category": "Restaurant",
    "menuCompleteness": 70,
    "priceCategory": "₹₹",
    "tcScore": 86,
    "valueScore": 66,
  },
  "rst_wok": {
    "category": "Restaurant",
    "menuCompleteness": 70,
    "priceCategory": "₹₹",
    "tcScore": 84,
    "valueScore": 78,
  },
}
`;
